# ghprs

./: Cargo.toml
ghprs-client/: Cargo.toml
ghprs-client/src/: main.rs
ghprs-core/: Cargo.toml
ghprs-core/src/: lib.rs
ghprsd/: Cargo.toml  config.toml
ghprsd/src/: app.rs  gh_client.rs  main.rs
src/: gh_client.rs  main.rs  prs.rs
