[package]
name = "ghprs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ghp"
path = "src/main.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
ghprs-core = { path = "../ghprs-core" }
tabled = "0.14.0"
