[package]
name = "ghprsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["process", "rt", "macros", "fs", "io-util"] }
toml = "0.8.8"
ghprs-core = { path = "../ghprs-core" }
log = "0.4.20"
simple_logger = "4.2.0"
